# axiom-gui

./: .gitignore  ARCHITECTURAL_ANALYSIS_WEB_VS_DESKTOP.md  BUILD_INSTRUCTIONS.md  COMPLETION_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  COMPREHENSIVE_VALIDATION_PLAN.md  DECISION_WGPU_WASM_WEB_ARCHITECTURE.md  GITHUB_SETUP_SUMMARY.md  IMPLEMENTATION_PLAN_WGPU_WASM.md  IMPLEMENTATION_STATUS.md  README.md  TEST_SUITE_SUMMARY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
axiom-core/: Cargo.toml  test_lammps_bonds.rs
axiom-core/src/: bonds.rs  colors.rs  errors.rs  lib.rs  lod.rs  octree.rs  perf_metrics.rs  renderer.rs  renderer.rs.backup  renderer_cpu.rs  shaders.wgsl
axiom-core/src/atoms/: mod.rs
axiom-core/src/parsers/: cif.rs  gro.rs  lammps.rs  mod.rs  pdb.rs  xyz.rs
axiom-core/src/selection/: evaluator.rs  mod.rs  parser.rs
axiom-core/tests/: integration_test.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AtomPicker.tsx  AtomSelectionPanel.tsx  AutoLoadTest.tsx  CameraControls.tsx  Canvas.tsx  ErrorBoundary.tsx  ExportPanel.tsx  FileInfoPanel.tsx  KeyboardShortcutsHelp.tsx  LoadingSpinner.tsx  MeasurementOverlay.tsx  PerformanceMetricsPanel.tsx  RecentFilesList.tsx  RenderControls.tsx  RenderingSettingsPanel.tsx  SelectionPanel.tsx  Sidebar.tsx  StatsPanel.tsx  StatusBar.tsx  Toolbar.tsx
src/contexts/: RecentFilesContext.tsx
src/hooks/: useAxiom.ts  useClickSelection.ts  useDragAndDrop.ts  useKeyboardShortcuts.ts  useMouseControls.ts  useRecentFiles.ts  useRenderSettingsPersistence.ts
src/store/: axiomStore.ts
src/types/: axiom.ts
src/utils/: camera.ts  measurements.ts  recentFiles.ts  tauri.ts
visual-tests/: DELIVERABLES.md  README.md  VALIDATION_SUMMARY.md  VISUAL_VALIDATION_REPORT.md
visual-tests/scripts/: axiom_render_test.py  direct_render_test.py  manual_visual_test.sh  simple_visual_test.py  visual_validator.py  webdriver_visual_test.py
(+7 files in other folders)
