[package]
name = "axiom-gui"
version = "0.2.5"
description = "Desktop GUI for Axiom molecular visualization"
authors = ["Heinz Lab Agent"]
license = "MIT OR Apache-2.0"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
anyhow = "1.0"
png = "0.17"

# Axiom core - relative path to axiom-core crate (in repository root)
axiom-core = { path = "../axiom-core" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
